Following work done: - Replace hljs-copy plugin cdn with a local js file becuase of async issues with vue plugin. - Add shadows to code-preview component. - Add global styles for scrollbar. - Change accent color to match the bootstrap logo color.

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -16,7 +16,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fff;
+  background-color: white;
 }
 
 .theme-default-content:not(.custom)
@@ -40,3 +40,16 @@ h6
 
 a 
   font-weight unset
+
+*::-webkit-scrollbar
+  width 6px
+  height 6px
+  background-color rgba(86, 61, 124, 0.226)
+
+*::-webkit-scrollbar-thumb
+  border-radius 10px
+  background-color #563D7C
+
+*::-webkit-scrollbar-track
+  border-radius 10px
+  background-color rgba(86, 61, 124, 0.226)
